--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -92,8 +92,7 @@ include: "rules/bwa.smk"
 include: "rules/markdups.smk"
 include: "rules/bqsr.smk"
 include: "rules/haplotype.smk"
-include: "rules/filter.smk"
-include: "rules/vqsr.smk"
+include: "rules/apply_filter.smk"
 include: "rules/metrics.smk"
 include: "rules/vep.smk"
 include: "rules/multiqc.smk"
